2012-10-08  Peter Rybin  <peter.rybin@gmail.com>

        Do not swallow fatal messages in qt/DumpRenderTree
        https://bugs.webkit.org/show_bug.cgi?id=98211

        Reviewed by Eric Seidel.

        Fix condition in message type filtering.

        * DumpRenderTree/qt/DumpRenderTreeMain.cpp:
        (messageHandler):

2012-10-08  Caio Marcelo de Oliveira Filho  <caio.oliveira@openbossa.org>

        Unreviewed. Moving myself from Committer to Reviewer list.
        http://lists.webkit.org/pipermail/webkit-dev/2012-October/022460.html

        * Scripts/webkitpy/common/config/committers.py:

2012-10-08  Dirk Pranke  <dpranke@chromium.org>

        nrwt: [chromium] run http tests in parallel on bigger machines
        https://bugs.webkit.org/show_bug.cgi?id=98562

        Reviewed by Eric Seidel.

        The "locked tests" shard (which includes the http tests and the
        perf tests) is the long pole on machines where we have 4 or more
        workers, so we should start making sure that
        we can run http tests in parallel, following the normal sharding
        rules (all tests in the same directory are in the same shard by
        default). We should still probably limit the number of workers
        hitting the web server in parallel where we can; a heuristic of
        no more than 25% of them seems okay for a start. This will
        likely only affect developer workstations and a couple of bots
        at first, so should be low risk and a good reward.

        * Scripts/webkitpy/layout_tests/port/base.py:
        (Port.default_max_locked_shards):
        * Scripts/webkitpy/layout_tests/port/chromium.py:
        (ChromiumPort.default_max_locked_shards):
        * Scripts/webkitpy/layout_tests/port/chromium_port_testcase.py:
        (ChromiumPortTestCase.test_default_max_locked_shards):
        * Scripts/webkitpy/layout_tests/port/port_testcase.py:
        (PortTestCase.test_default_max_locked_shards):